# atproto-blog

./: .gitignore  Cargo.toml  justfile  leptosfmt.toml  tailwind.config.js
scripts/: cleanup.ps1  start-watch.ps1  stop-watch.ps1  watch-wrapper.ps1
src/: app.rs  lib.rs
src/components/: arrowcard.rs  container.rs  header.rs  link.rs  meta.rs  mod.rs
src/libs/: atproto.rs  mod.rs  state.rs
src/pages/: home.rs
